--- a/package.json
+++ b/package.json
@@ -44,12 +44,12 @@
   },
   "dependencies": {
     "async": "^1.5.2",
+    "babel-polyfill": "^6.5.0",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
     "inquirer": "^0.12.0",
-    "shelljs": "^0.6.0",
-    "winston": "^2.1.1",
-    "babel-polyfill": "^6.5.0"
+    "shelljs": "^0.7.8",
+    "winston": "^2.1.1"
   },
   "keywords": [],
   "devDependencies": {
