--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "commander": "^2.9.0",
     "inquirer": "^0.12.0",
     "shelljs": "^0.7.8",
-    "winston": "^2.1.1"
+    "winston": "^2.1.1",
+    "yamljs": "^0.2.10"
   },
   "keywords": [],
   "devDependencies": {
